# f5-tts-vivoice

./: .gitignore  F5_TTS_Vietnamese.ipynb  README.md  app.py  pyproject.toml  setup_model.py  test.py  test_e2e.py  test_patch.py  test_pydub.py  test_torchaudio.py  test_whisper.py
